[gd_scene load_steps=17 format=2]

[ext_resource path="res://Scenes/Player/Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://Sounds/Player/sndDeath.wav" type="AudioStream" id=2]
[ext_resource path="res://Sounds/Player/sndJump.wav" type="AudioStream" id=3]
[ext_resource path="res://Sounds/Player/sndDJump.wav" type="AudioStream" id=4]
[ext_resource path="res://Sounds/Player/sndShoot.wav" type="AudioStream" id=5]
[ext_resource path="res://Scenes/Player/PlayerHeart.tscn" type="PackedScene" id=6]
[ext_resource path="res://Scripts/Player/PlayerController.gd" type="Script" id=7]
[ext_resource path="res://Themes/default_theme.tres" type="Theme" id=8]

[sub_resource type="Curve" id=1]
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, 0 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=2]
curve = SubResource( 1 )

[sub_resource type="Gradient" id=3]
offsets = PoolRealArray( 1 )
colors = PoolColorArray( 1, 1, 1, 1 )

[sub_resource type="GradientTexture" id=4]
gradient = SubResource( 3 )

[sub_resource type="Curve" id=5]
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, 0 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=6]
curve = SubResource( 5 )

[sub_resource type="ParticlesMaterial" id=7]
trail_divisor = 10
trail_size_modifier = SubResource( 6 )
trail_color_modifier = SubResource( 4 )
flag_disable_z = true
spread = 180.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 50.0
initial_velocity_random = 0.5
orbit_velocity = 1.0
orbit_velocity_random = 0.0
scale = 5.0
scale_random = 0.2
scale_curve = SubResource( 2 )
color = Color( 1, 0, 0, 1 )

[sub_resource type="RectangleShape2D" id=8]
extents = Vector2( 304, 168 )

[node name="PlayerController" type="Node2D" groups=["Saved"]]
z_index = 120
script = ExtResource( 7 )

[node name="Player" parent="." instance=ExtResource( 1 )]
z_index = 1

[node name="Sounds" type="Node" parent="."]

[node name="Death" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource( 2 )
bus = "Sfx"

[node name="Jump" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource( 3 )
volume_db = 5.0
bus = "Sfx"

[node name="Djump" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource( 4 )
volume_db = 5.0
bus = "Sfx"

[node name="Shoot" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource( 5 )
volume_db = -2.0
bus = "Sfx"

[node name="Blood" type="Particles2D" parent="."]
emitting = false
amount = 500
process_material = SubResource( 7 )

[node name="BloodTimer" type="Timer" parent="."]
one_shot = true

[node name="CameraVisibility" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 512

[node name="CollisionShape2D" type="CollisionShape2D" parent="CameraVisibility"]
self_modulate = Color( 1, 0, 0, 0.227451 )
shape = SubResource( 8 )

[node name="Camera" type="Camera2D" parent="."]
process_mode = 0
limit_left = 0
limit_top = 0
limit_right = 3200
limit_bottom = 1800
limit_smoothed = true
smoothing_enabled = true
drag_margin_left = 0.01
drag_margin_top = 0.01
drag_margin_right = 0.01
drag_margin_bottom = 0.01
editor_draw_limits = true
editor_draw_drag_margin = true

[node name="CameraTween" type="Tween" parent="."]

[node name="CheckpointTeleport" type="Timer" parent="."]
one_shot = true

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = 2

[node name="HealthContainer" type="GridContainer" parent="CanvasLayer"]
unique_name_in_owner = true
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -320.0
margin_top = -180.0
margin_right = -192.0
margin_bottom = -148.0
theme = ExtResource( 8 )

[node name="PlayerHeart" parent="CanvasLayer/HealthContainer" instance=ExtResource( 6 )]
unique_name_in_owner = true

[connection signal="damaged" from="Player" to="." method="_on_Player_damaged"]
[connection signal="dashed" from="Player" to="." method="_on_Player_dashed"]
[connection signal="dead" from="Player" to="." method="_on_Player_dead"]
[connection signal="shoot" from="Player" to="." method="_on_Player_shoot"]
[connection signal="sound" from="Player" to="." method="_on_Player_sound"]
[connection signal="timeout" from="BloodTimer" to="." method="_on_BloodTimer_timeout"]
[connection signal="area_entered" from="CameraVisibility" to="." method="_on_CameraVisibility_area_entered"]
[connection signal="area_exited" from="CameraVisibility" to="." method="_on_CameraVisibility_area_exited"]
[connection signal="timeout" from="CheckpointTeleport" to="." method="_on_CheckpointTeleport_timeout"]
